# VoxelRaytracer

./: .gitignore  CMakeLists.txt  README.md
include/: application.h  errors.h  raytracing.h
include/gfx/: buffer.h  gfx.h  mesh.h  pipeline.h
src/: application.cpp  main.cpp  raytracing.cpp  voxel_tracer.cpp
src/gfx/: buffer.cpp  gfx.cpp  gltf.cpp  pipeline.cpp
